--- a/CP2/.settings/org.eclipse.core.resources.prefs
+++ b/CP2/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//datos/java/_eclipse\ workspace\ J2EE/CP2/target/m2e-wtp/web-resources/META-INF/maven/com.cp/CP2/pom.properties=UTF-8
 encoding/<project>=UTF-8
