--- a/CP2/WebContent/WEB-INF/web.xml
+++ b/CP2/WebContent/WEB-INF/web.xml
@@ -5,7 +5,11 @@
 						http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
 
-	<display-name>01-jsf-login</display-name>
+	<display-name>jsf-test</display-name>
+
+	<welcome-file-list>
+		<welcome-file>index.xhtml</welcome-file>
+	</welcome-file-list>
 
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
@@ -16,10 +20,6 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
-
-	<welcome-file-list>
-		<welcome-file>index.xhtml</welcome-file>
-	</welcome-file-list>
 
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
