--- a/CP2/pom.xml
+++ b/CP2/pom.xml
@@ -63,6 +63,11 @@
 			<version>8.0.15</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>font-awesome</artifactId>
+			<version>4.7.0</version>
+		</dependency>
 
 	</dependencies>
 
